# p2s-dma-scanner

./: .gitignore  HANDOFF.md  README.md  dma_physmem.py  proc_ioctl_readmem.py
BufferedPidIoctlSkeleton/: README.md
BufferedPidIoctlSkeleton/BufferedPidIoctlDriver/: BufferedPidIoctlDriver.inf  Driver.c  Public.h  dma_physmem.c
BufferedPidIoctlSkeleton/UserModeTest/: main.c
ch347-temp-20260705-225746/: .gitignore  README.md  build_all.bat  package.json
ch347-temp-20260705-225746/docs/: UNSAFE_READMEM_DISABLED.md
ch347-temp-20260705-225746/driver/: proc_ioctl_driver.c
ch347-temp-20260705-225746/gui/: README.md  app.js  index.html  launch_gui.cmd  launch_gui.ps1  serve_gui.py  styles.css
ch347-temp-20260705-225746/include/: proc_ioctl_shared.h
ch347-temp-20260705-225746/tools/: build_driver.ps1  build_user.ps1  verify_safe_surface.ps1
ch347-temp-20260705-225746/user/: kalman_motion_demo.cpp  kalman_motion_filter.hpp  p2s_gui.cpp  proc_ioctl_client.c  proc_ioctl_controller.cpp  proc_ioctl_readmem.c
inject/: README.md  apc_inject.cpp  keep_inject.cpp  msw_inject.cpp
macro/: CMakeLists.txt  __init__.py  build_dma.bat  config.json  dma_client.py  main.py  ptr_chain.h  reader.h
msw/: README.md  bypass_launcher.py  check_arch.py  full_extract.py  full_extract2.py  launch_admin.bat  launcher.py  msw_reconstruct.py  patch_bytecode.py  patch_verify.py  run.bat  run_admin.bat  run_patched.py  runas.vbs  se_debug_launcher.py
